<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".checkIN">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@color/deepYellow"
            app:cardCornerRadius="10dp"
            app:cardElevation="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/check_in_today_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30dp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/deadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignBottom="@+id/checkInButton"
                        android:layout_marginLeft="2dp"
                        android:text="今日截止事件:3"
                        android:textColor="#000000"
                        android:textSize="35dp" />

                    <Button
                        android:id="@+id/checkInButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text=" 签到 "
                        android:textSize="25dp"
                        android:clickable="true"
                        android:background="@drawable/check_in_selector"/>

                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12月已完成12个任务"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:text="少"/>

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/greenShade1"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="center" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/greenShade2"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="center" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/greenShade3"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="center" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/greenShade4"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="center" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/greenShade5"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/greenShade6"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="多"/>

            </LinearLayout>

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/jan"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/jan"
                    style="?android:attr/textAppearanceButton"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/tab_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/jan" />

                <RadioButton
                    android:id="@+id/feb"
                    style="?android:attr/textAppearanceButton"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/tab_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/feb" />

                <RadioButton
                    android:id="@+id/mar"
                    style="?android:attr/textAppearanceButton"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/tab_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/mar" />

                <RadioButton
                    android:id="@+id/apr"
                    style="?android:attr/textAppearanceButton"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/tab_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/apr" />

                <RadioButton
                    android:id="@+id/may"
                    style="?android:attr/textAppearanceButton"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/tab_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/may" />

                <RadioButton
                    android:id="@+id/jun"
                    style="?android:attr/textAppearanceButton"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/tab_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/jun" />

                <RadioButton
                    android:id="@+id/jul"
                    style="?android:attr/textAppearanceButton"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/tab_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/jul" />

                <RadioButton
                    android:id="@+id/aug"
                    style="?android:attr/textAppearanceButton"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/tab_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/aug" />

                <RadioButton
                    android:id="@+id/sep"
                    style="?android:attr/textAppearanceButton"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/tab_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/sep" />

                <RadioButton
                    android:id="@+id/oct"
                    style="?android:attr/textAppearanceButton"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/tab_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/oct" />

                <RadioButton
                    android:id="@+id/nov"
                    style="?android:attr/textAppearanceButton"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/tab_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/nov" />

                <RadioButton
                    android:id="@+id/dec"
                    style="?android:attr/textAppearanceButton"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/tab_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/dec" />

            </RadioGroup>

        </HorizontalScrollView>

        <com.tomato830.note_fjm.ForScrollView.GridViewForScrollView
            android:id="@+id/gridView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:listSelector="#00000000"
            android:numColumns="7"/>

    </LinearLayout>

</ScrollView>